--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Image Rollover</title>
-    <link rel="stylesheet" type="text/css" href="rollover.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="rollover.css" />
+  </head>
 
-<body>
+  <body>
     <main>
-        <h1>Fishing Images</h1>
-        <p>Move your mouse over an image to change it and back out of the 
-            image to restore the original image.</p>
-        <ul id="image_rollovers">
-            <li><img src="images/release.jpg" alt="" id="images/deer.jpg"></li>
-            <li><img src="images/hero.jpg" alt="" id="images/bison.jpg"></li>
-        </ul>
+      <h1>Fishing Images</h1>
+      <p>
+        Move your mouse over an image to change it and back out of the image to
+        restore the original image.
+      </p>
+      <ul id="image_rollovers">
+        <li>
+          <img src="images/release.jpg" alt="" id="images/deer.jpg" />
+        </li>
+        <li>
+          <img src="images/hero.jpg" alt="" id="images/bison.jpg" />
+        </li>
+      </ul>
     </main>
     <script src="rollover.js"></script>
-</body>
+  </body>
 </html>
